--- a/game.html
+++ b/game.html
@@ -3,12 +3,22 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Game</title>
+<title>Birthday Arcade</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>📷 Game</h1>
-<p>Memories go here!</p>
-<a href="index.html" class="btn">← Back Home</a>
+
+<h1>🎮 Birthday Arcade</h1>
+<p>Pick a fun game to play!</p>
+
+<div class="buttons">
+  <a href="click-the-cake.html" target="_blank" class="btn">🍰 Click the Cake</a>
+  <a href="memory.html" target="_blank" class="btn">🃏 Memory Flip Card</a>
+  <a href="balloon.html" target="_blank" class="btn">🎈 Balloon Pop</a>
+  <a href="catch.html" target="_blank" class="btn">💖 Catch the Heart</a>
+</div>
+
+<a href="index.html" class="btn" style="margin-top:40px;">← Back Home</a>
+
 </body>
 </html>
