--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 
 <div class="container">
-  <h1>🎂 Happy 18th Birthday, [Friend's Name]! 🎉</h1>
+  <h1>🎂 Happy 18th Birthday, Anna! 🎉</h1>
   <p>Welcome to your special birthday website!  
      Explore each tab for memories, games, and music made just for you.</p>
   
   <div class="buttons">
     <a href="scrapbook.html" class="btn">📷 Scrapbook</a>
-    <a href="game.html" class="btn">🎮 Quiz Game</a>
+    <a href="game.html" class="btn">🎮 Game</a>
     <a href="music.html" class="btn">🎵 Playlist</a>
   </div>
 </div>
