--- a/game.html
+++ b/game.html
@@ -7,18 +7,20 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
 
-<h1>🎮 Birthday Arcade</h1>
-<p>Pick a fun game to play!</p>
+    <h1>🎮 Birthday Arcade</h1>
+    <p>Pick a fun game to play!</p>
 
-<div class="buttons">
-  <a href="click-the-cake.html" target="_blank" class="btn">🍰 Click the Cake</a>
-  <a href="memory.html" target="_blank" class="btn">🃏 Memory Flip Card</a>
-  <a href="balloon.html" target="_blank" class="btn">🎈 Balloon Pop</a>
-  <a href="catch.html" target="_blank" class="btn">💖 Catch the Heart</a>
-</div>
+    <div class="buttons">
+      <a href="click-the-cake.html" target="_blank" class="btn">🍰 Click the Cake</a>
+      <a href="memory.html" target="_blank" class="btn">🃏 Memory Flip Card</a>
+      <a href="balloon.html" target="_blank" class="btn">🎈 Balloon Pop</a>
+      <a href="catch.html" target="_blank" class="btn">💖 Catch the Heart</a>
+    </div>
 
-<a href="index.html" class="btn" style="margin-top:40px;">← Back Home</a>
+    <a href="index.html" class="btn footer-btn">← Back Home</a>
 
+  </div>
 </body>
 </html>
