--- a/music.html
+++ b/music.html
@@ -9,6 +9,6 @@
 <body>
 <h1>📷 Music</h1>
 <p>Memories go here!</p>
-<a href="index.html" class="btn">← Back Home</a>
+<a href="index.html" class="btn footer-btn">← Back Home</a>
 </body>
 </html>
