--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
 
-    <h1>🎂 Happy 18th Birthday, [Friend's Name]! 🎉</h1>
+    <h1>🎂 Happy 18th Birthday, Anna! 🎉</h1>
     <p>Welcome to your special birthday website!  
        Explore each tab for memories, games, and music made just for you.</p>
     
@@ -19,8 +19,7 @@
       <a href="music.html" class="btn">🎵 Playlist</a>
     </div>
 
-    <a href="index.html" class="btn footer-btn">← Back Home</a>
-
+    
   </div>
 </body>
 </html>
