--- a/click-the-cake.html
+++ b/click-the-cake.html
@@ -1,86 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>🍰 Click the Cake Game</title>
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+
+<!-- Stylesheet -->
 <link rel="stylesheet" href="style.css">
-<style>
-  body {
-    background: black;
-    color: gold;
-    font-family: 'Segoe UI', sans-serif;
-    text-align: center;
-  }
-  .cake {
-    position: fixed;
-    width: 60px;
-    cursor: pointer;
-    z-index: 10;
-    transition: transform 0.2s;
-  }
-  .cake:active {
-    transform: scale(0.8);
-  }
-  #score {
-    font-size: 2rem;
-    margin: 20px;
-  }
-  #prize {
-    font-size: 2.5rem;
-    color: gold;
-    text-shadow: 0 0 10px #ffd700;
-    margin-top: 30px;
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  /* Modal styles */
-  #modal {
-    display: none;
-    position: fixed;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.8);
-  }
-  #modal-content {
-    background-color: #111;
-    margin: 15% auto;
-    padding: 30px;
-    border: 3px solid gold;
-    width: 80%;
-    max-width: 400px;
-    color: gold;
-    text-align: center;
-    border-radius: 12px;
-    font-size: 1.5rem;
-  }
-  #modal-close {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background: gold;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 8px;
-  }
-  a.btn {
-    display: inline-block;
-    margin: 40px auto;
-    padding: 10px 25px;
-    background: gold;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 12px;
-  }
-</style>
 </head>
 <body>
   <div class="container">
@@ -137,7 +67,7 @@
         if (score >= 10) return;
 
         let cake = document.createElement('img');
-        cake.src = "images/cake.png";  // <-- USE YOUR OWN IMAGE HERE
+        cake.src = "images/cake.png";  // <-- Your cake image here
         cake.className = "cake";
         cake.style.left = Math.random() * 90 + "vw";
         cake.style.top = Math.random() * 80 + "vh";
@@ -178,5 +108,22 @@
     </script>
 
   </div>
+
+  <!-- Footer and sparkle script -->
+  <footer>Made with ❤️ for Anna’s 18th birthday.</footer>
+
+  <script>
+    function createSparkle() {
+      const sparkle = document.createElement('div');
+      sparkle.className = 'sparkle';
+      sparkle.style.left = Math.random() * 100 + 'vw';
+      sparkle.style.background = `hsl(${Math.random() * 360}, 70%, 60%)`;
+      sparkle.style.animationDuration = (2 + Math.random() * 3) + 's';
+      document.body.appendChild(sparkle);
+
+      setTimeout(() => sparkle.remove(), 5000);
+    }
+    setInterval(createSparkle, 300);
+  </script>
 </body>
 </html>
