--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Happy 18th Birthday!</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Happy Birthday Anna!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -19,7 +20,23 @@
       <a href="music.html" class="btn">🎵 Playlist</a>
     </div>
 
-    
   </div>
+
+  <!-- Footer and sparkle script -->
+  <footer>Made with ❤️ for Anna’s 18th birthday.</footer>
+
+  <script>
+    function createSparkle() {
+      const sparkle = document.createElement('div');
+      sparkle.className = 'sparkle';
+      sparkle.style.left = Math.random() * 100 + 'vw';
+      sparkle.style.background = `hsl(${Math.random() * 360}, 70%, 60%)`;
+      sparkle.style.animationDuration = (2 + Math.random() * 3) + 's';
+      document.body.appendChild(sparkle);
+
+      setTimeout(() => sparkle.remove(), 5000);
+    }
+    setInterval(createSparkle, 300);
+  </script>
 </body>
 </html>
