--- a/scrapbook.html
+++ b/scrapbook.html
@@ -4,11 +4,30 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Scrapbook</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>📷 Scrapbook</h1>
-<p>Memories go here!</p>
-<a href="index.html" class="btn footer-btn">← Back Home</a>
+  <div class="container">
+    <h1>📷 Scrapbook</h1>
+    <p>Memories go here!</p>
+    <a href="index.html" class="btn">← Back Home</a>
+  </div>
+
+  <footer>Made with ❤️ for Anna’s 18th birthday.</footer>
+
+  <script>
+    function createSparkle() {
+      const sparkle = document.createElement('div');
+      sparkle.className = 'sparkle';
+      sparkle.style.left = Math.random() * 100 + 'vw';
+      sparkle.style.background = `hsl(${Math.random() * 360}, 70%, 60%)`;
+      sparkle.style.animationDuration = (2 + Math.random() * 3) + 's';
+      document.body.appendChild(sparkle);
+
+      setTimeout(() => sparkle.remove(), 5000);
+    }
+    setInterval(createSparkle, 300);
+  </script>
 </body>
 </html>
