--- a/music.html
+++ b/music.html
@@ -1,59 +1,113 @@
-body {
-  background-color: #A0153E;
-  color: gold;
-  font-family: 'Playfair Display', 'Merriweather', serif;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  overflow-x: hidden;
-}
-
-h1, h2, h3 {
-  font-family: 'Playfair Display', 'Merriweather', serif;
-  color: gold;
-}
-
-a.btn, button {
-  display: inline-block;
-  margin: 20px auto;
-  padding: 10px 25px;
-  background: gold;
-  color: #A0153E;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 12px;
-  border: none;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-
-a.btn:hover, button:hover {
-  background: #ffd700;
-  box-shadow: 0 0 15px gold, 0 0 30px gold;
-  color: #A0153E;
-}
-
-footer {
-  margin-top: auto;
-  padding: 20px;
-  color: gold;
-  font-size: 1rem;
-}
-
-.sparkle {
-  position: fixed;
-  top: -10px;
-  width: 8px;
-  height: 8px;
-  background: gold;
-  border-radius: 50%;
-  opacity: 0.8;
-  animation: fall 5s linear forwards;
-}
-
-@keyframes fall {
-  to {
-    transform: translateY(110vh) rotate(360deg);
-    opacity: 0;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>🎵 Anna's Birthday Playlist</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  body {
+    background: #A0153E;
+    color: black;
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    padding: 30px;
   }
-}
+  h1 {
+    margin-bottom: 10px;
+  }
+  .playlist {
+    max-width: 600px;
+    margin: 0 auto;
+    background: gold;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+  }
+  .playlist a {
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    padding: 12px 20px;
+    margin: 8px 0;
+    background: rgba(0,0,0,0.1);
+    border-radius: 10px;
+    transition: background 0.3s, transform 0.2s;
+  }
+  .playlist a:hover {
+    background: rgba(0,0,0,0.2);
+    transform: scale(1.05);
+  }
+  .footer-btn {
+    display: inline-block;
+    margin-top: 40px;
+    padding: 10px 25px;
+    background: gold;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 12px;
+  }
+</style>
+</head>
+<body>
+  <h1>🎉 Anna's 18th Birthday Playlist 🎉</h1>
+  <p style="font-size:1.3rem;margin-bottom:25px;">A soundtrack to your happiest memories, Anna 🎂🎉</p>
+
+  <div class="playlist">
+    <a href="song1.html">1. Happy Birthday - Stevie Wonder</a>
+    <a href="song2.html">2. Birthday - Katy Perry</a>
+    <a href="song3.html">3. 18 - One Direction</a>
+    <a href="song4.html">4. Youngblood - 5SOS</a>
+    <a href="song5.html">5. Forever Young - Alphaville</a>
+    <a href="song6.html">6. Good Life - OneRepublic</a>
+    <a href="song7.html">7. Celebrate - Kool & The Gang</a>
+    <a href="song8.html">8. Good as Hell - Lizzo</a>
+    <a href="song9.html">9. We Are Young - fun.</a>
+    <a href="song10.html">10. Best Day of My Life - American Authors</a>
+    <a href="song11.html">11. Uptown Funk - Bruno Mars</a>
+    <a href="song12.html">12. Can’t Stop the Feeling! - JT</a>
+    <a href="song13.html">13. Party in the U.S.A. - Miley Cyrus</a>
+    <a href="song14.html">14. Don’t Stop the Music - Rihanna</a>
+    <a href="song15.html">15. Glad You Came - The Wanted</a>
+    <a href="song16.html">16. Shut Up and Dance - WALK THE MOON</a>
+    <a href="song17.html">17. Sugar - Maroon 5</a>
+    <a href="song18.html">18. On Top of the World - Imagine Dragons</a>
+    <a href="song19.html">19. Firework - Katy Perry</a>
+    <a href="song20.html">20. Dynamite - Taio Cruz</a>
+    <a href="song21.html">21. Levitating - Dua Lipa</a>
+    <a href="song22.html">22. As It Was - Harry Styles</a>
+    <a href="song23.html">23. Blinding Lights - The Weeknd</a>
+    <a href="song24.html">24. Dance Monkey - Tones and I</a>
+    <a href="song25.html">25. Sunroof - Nicky Youre & dazy</a>
+    <a href="song26.html">26. Walking on Sunshine - Katrina & The Waves</a>
+    <a href="song27.html">27. Good Time - Owl City & Carly Rae Jepsen</a>
+    <a href="song28.html">28. Wake Me Up - Avicii</a>
+    <a href="song29.html">29. Raise Your Glass - P!nk</a>
+    <a href="song30.html">30. I Gotta Feeling - Black Eyed Peas</a>
+    <a href="song31.html">31. Break My Heart - Dua Lipa</a>
+    <a href="song32.html">32. Locked Out of Heaven - Bruno Mars</a>
+    <a href="song33.html">33. Perfect - Ed Sheeran</a>
+    <a href="song34.html">34. Say So - Doja Cat</a>
+    <a href="song35.html">35. Tik Tok - Ke$ha</a>
+    <a href="song36.html">36. Shape of You - Ed Sheeran</a>
+    <a href="song37.html">37. Starships - Nicki Minaj</a>
+    <a href="song38.html">38. Roar - Katy Perry</a>
+    <a href="song39.html">39. High Hopes - Panic! At The Disco</a>
+    <a href="song40.html">40. Beautiful People - Ed Sheeran</a>
+    <a href="song41.html">41. Stitches - Shawn Mendes</a>
+    <a href="song42.html">42. Sorry - Justin Bieber</a>
+    <a href="song43.html">43. Memories - Maroon 5</a>
+    <a href="song44.html">44. That’s What I Like - Bruno Mars</a>
+    <a href="song45.html">45. Peaches - Justin Bieber</a>
+    <a href="song46.html">46. What Makes You Beautiful - One Direction</a>
+    <a href="song47.html">47. Love Story - Taylor Swift</a>
+    <a href="song48.html">48. Better Now - Post Malone</a>
+    <a href="song49.html">49. Talk - Khalid</a>
+    <a href="song50.html">50. Heat Waves - Glass Animals</a>
+  </div>
+
+  <a href="game.html" class="footer-btn">← Back to Games</a>
+</body>
+</html>
