--- a/music.html
+++ b/music.html
@@ -58,4 +58,41 @@
     <a href="song13.html">13. Party in the U.S.A. - Miley Cyrus</a>
     <a href="song14.html">14. Don’t Stop the Music - Rihanna</a>
     <a href="song15.html">15. Glad You Came - The Wanted</a>
-    <a href="song16.html">16. Shut Up a
+    <a href="song16.html">16. Shut Up and Dance - WALK THE MOON</a>
+    <a href="song17.html">17. Sugar - Maroon 5</a>
+    <a href="song18.html">18. On Top of the World - Imagine Dragons</a>
+    <a href="song19.html">19. Firework - Katy Perry</a>
+    <a href="song20.html">20. Dynamite - Taio Cruz</a>
+    <a href="song21.html">21. Levitating - Dua Lipa</a>
+    <a href="song22.html">22. As It Was - Harry Styles</a>
+    <a href="song23.html">23. Blinding Lights - The Weeknd</a>
+    <a href="song24.html">24. Dance Monkey - Tones and I</a>
+    <a href="song25.html">25. Sunroof - Nicky Youre & dazy</a>
+    <a href="song26.html">26. Walking on Sunshine - Katrina & The Waves</a>
+    <a href="song27.html">27. Good Time - Owl City & Carly Rae Jepsen</a>
+    <a href="song28.html">28. Wake Me Up - Avicii</a>
+    <a href="song29.html">29. Raise Your Glass - P!nk</a>
+    <a href="song30.html">30. I Gotta Feeling - The Black Eyed Peas</a>
+    <a href="song31.html">31. Break My Heart - Dua Lipa</a>
+    <a href="song32.html">32. Locked Out of Heaven - Bruno Mars</a>
+    <a href="song33.html">33. Perfect - Ed Sheeran</a>
+    <a href="song34.html">34. Say So - Doja Cat</a>
+    <a href="song35.html">35. Tik Tok - Ke$ha</a>
+    <a href="song36.html">36. Shape of You - Ed Sheeran</a>
+    <a href="song37.html">37. Starships - Nicki Minaj</a>
+    <a href="song38.html">38. Roar - Katy Perry</a>
+    <a href="song39.html">39. High Hopes - Panic! At The Disco</a>
+    <a href="song40.html">40. Beautiful People - Ed Sheeran ft. Khalid</a>
+    <a href="song41.html">41. Stitches - Shawn Mendes</a>
+    <a href="song42.html">42. Sorry - Justin Bieber</a>
+    <a href="song43.html">43. Memories - Maroon 5</a>
+    <a href="song44.html">44. That’s What I Like - Bruno Mars</a>
+    <a href="song45.html">45. Peaches - Justin Bieber</a>
+    <a href="song46.html">46. What Makes You Beautiful - One Direction</a>
+    <a href="song47.html">47. Love Story (Taylor’s Version) - Taylor Swift</a>
+    <a href="song48.html">48. Better Now - Post Malone</a>
+    <a href="song49.html">49. Talk - Khalid</a>
+    <a href="song50.html">50. Heat Waves - Glass Animals</a>
+  </div>
+</body>
+</html>
