--- a/song6.html
+++ b/song6.html
@@ -54,6 +54,6 @@
     With you by my side, every little moment becomes a memory worth keeping. Here’s to us and this beautiful, messy, wonderful good life we’re building together. 🌷
   </p>
   <br>
-  <a href="playlist.html" class="btn">← Back to Playlist</a>
+  <a href="music.html" class="btn">← Back to Playlist</a>
 </body>
 </html>
