--- a/song2.html
+++ b/song2.html
@@ -54,6 +54,6 @@
     Anna, I hope today makes you feel as special and wild as this song — you deserve a day all about *you*, full of laughter and crazy memories. Love you endlessly! 💖
   </p>
   <br>
-  <a href="playlist.html" class="btn">← Back to Playlist</a>
+  <a href="music.html" class="btn">← Back to Playlist</a>
 </body>
 </html>
