--- a/song3.html
+++ b/song3.html
@@ -54,6 +54,6 @@
     Even if we’ve known each other forever, this year feels extra special. I can’t wait to see all the beautiful things 18 brings you — I’ll be by your side for it all. 🥰
   </p>
   <br>
-  <a href="playlist.html" class="btn">← Back to Playlist</a>
+  <a href="music.html" class="btn">← Back to Playlist</a>
 </body>
 </html>
