--- a/song4.html
+++ b/song4.html
@@ -54,6 +54,6 @@
     But you know what? I’m never leaving. You’re stuck with me for life, through every high and low, because best friends like us are forever. 💫
   </p>
   <br>
-  <a href="playlist.html" class="btn">← Back to Playlist</a>
+  <a href="music.html" class="btn">← Back to Playlist</a>
 </body>
 </html>
