--- a/song5.html
+++ b/song5.html
@@ -54,6 +54,6 @@
     Watching you laugh, live and dream makes me wish we could freeze time right here. No matter what, you'll always be forever young to me. 💖
   </p>
   <br>
-  <a href="playlist.html" class="btn">← Back to Playlist</a>
+  <a href="music.html" class="btn">← Back to Playlist</a>
 </body>
 </html>
