--- a/song1.html
+++ b/song1.html
@@ -48,6 +48,6 @@
   <p>Anna, this song is just a small reminder of how much you’re loved.  
   🎂 "Happy Birthday to you!" — may your heart always dance to this tune.</p>
   
-  <a href="playlist.html" class="btn">← Back to Playlist</a>
+  <a href="music.html" class="btn">← Back to Playlist</a>
 </body>
 </html>
