--- a/song1.html
+++ b/song1.html
@@ -1,138 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎵 Happy Birthday - Stevie Wonder</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background: #A0153E;
-      color: black;
-      font-family: 'Playfair Display', serif;
-      text-align: center;
-      padding: 30px;
-      overflow-x: hidden;
-      position: relative;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>🎵 Happy Birthday - Stevie Wonder</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet" />
+<style>
+  body {
+    margin: 0; padding: 30px;
+    background: #A0153E;
+    font-family: 'Playfair Display', serif;
+    color: black;
+    text-align: center;
+    overflow-x: hidden;
+    position: relative;
+    transition: background-color 1.5s ease;
+  }
+  h1 {
+    margin-bottom: 30px;
+  }
+  .player {
+    background: gold;
+    border-radius: 20px;
+    padding: 20px;
+    max-width: 480px;
+    margin: 0 auto 20px;
+    position: relative;
+    z-index: 10;
+    display: inline-block;
+  }
+  p.message {
+    background: gold;
+    border-radius: 12px;
+    padding: 20px;
+    max-width: 520px;
+    margin: 20px auto;
+    font-size: 1.2rem;
+    position: relative;
+    z-index: 10;
+  }
+  a.btn {
+    display: inline-block;
+    background: gold;
+    color: black;
+    padding: 12px 30px;
+    border-radius: 12px;
+    font-weight: bold;
+    text-decoration: none;
+    margin-top: 40px;
+    position: relative;
+    z-index: 10;
+  }
+  /* Confetti */
+  .confetti {
+    position: fixed;
+    top: -10px;
+    width: 10px;
+    height: 10px;
+    opacity: 0.85;
+    border-radius: 3px;
+    animation-name: fall;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    z-index: 1;
+  }
+  @keyframes fall {
+    to {
+      transform: translateY(110vh) rotate(360deg);
+      opacity: 0;
     }
-    .player {
-      margin: 40px auto;
-      background: gold;
-      padding: 20px;
-      border-radius: 20px;
-      display: inline-block;
-      position: relative;
-      z-index: 2;
-    }
-    p.message {
-      background: gold;
-      padding: 15px 20px;
-      border-radius: 12px;
-      display: inline-block;
-      margin-top: 20px;
-      font-size: 1.2rem;
-      max-width: 500px;
-      position: relative;
-      z-index: 2;
-    }
-    a.btn {
-      display: inline-block;
-      margin-top: 40px;
-      padding: 10px 25px;
-      background: gold;
-      color: black;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 12px;
-      position: relative;
-      z-index: 2;
-    }
-
-    /* Confetti styles */
-    .confetti {
-      position: fixed;
-      width: 10px;
-      height: 10px;
-      background-color: gold;
-      opacity: 0.8;
-      top: -10px;
-      animation-name: fall;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-      z-index: 1;
-      border-radius: 3px;
-    }
-
-    @keyframes fall {
-      to {
-        transform: translateY(110vh) rotate(360deg);
-        opacity: 0;
-      }
-    }
-
-    /* Sparkling emoji */
-    #party-emoji {
-      font-size: 3rem;
-      cursor: pointer;
-      margin-top: 20px;
-      display: inline-block;
-      user-select: none;
-      transition: transform 0.3s;
-      position: relative;
-      z-index: 2;
-    }
-    #party-emoji.sparkle {
-      animation: sparkle 1s ease-in-out infinite;
-      transform-origin: center;
-    }
-    @keyframes sparkle {
-      0%, 100% { transform: scale(1) rotate(0deg); }
-      50% { transform: scale(1.3) rotate(20deg); }
-    }
-  </style>
+  }
+  /* Sparkles */
+  .sparkle {
+    position: fixed;
+    width: 5px;
+    height: 5px;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.9;
+    animation: sparkleMove 3s linear infinite;
+    z-index: 2;
+  }
+  @keyframes sparkleMove {
+    0% {transform: translateY(0);}
+    100% {transform: translateY(80vh);}
+  }
+  /* Floating Balloons */
+  .balloon {
+    position: fixed;
+    bottom: -150px;
+    width: 40px;
+    height: 60px;
+    background: radial-gradient(circle at 50% 40%, #FFD700, #FFA500);
+    border-radius: 20px 20px 25px 25px;
+    opacity: 0.85;
+    animation-name: floatUp;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    z-index: 1;
+  }
+  @keyframes floatUp {
+    0% { bottom: -150px; transform: rotate(0deg); }
+    50% { transform: rotate(10deg); }
+    100% { bottom: 110vh; transform: rotate(-10deg);}
+  }
+  /* Dancing Emoji */
+  #dancing-emoji {
+    font-size: 4rem;
+    user-select: none;
+    cursor: default;
+    margin-top: 30px;
+    position: relative;
+    z-index: 10;
+    animation: dance 1s ease-in-out infinite;
+  }
+  @keyframes dance {
+    0%, 100% { transform: translateY(0) rotate(0deg); }
+    25% { transform: translateY(-10px) rotate(-10deg); }
+    50% { transform: translateY(0) rotate(0deg); }
+    75% { transform: translateY(-10px) rotate(10deg); }
+  }
+  /* Visualizer Bars */
+  #visualizer {
+    margin: 30px auto 0;
+    width: 320px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    max-width: 90vw;
+    position: relative;
+    z-index: 10;
+  }
+  .bar {
+    background: gold;
+    width: 15px;
+    border-radius: 5px;
+    transition: height 0.1s ease-out;
+  }
+  /* Fireworks container */
+  #fireworks-container {
+    pointer-events: none;
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    z-index: 20;
+    overflow: visible;
+  }
+</style>
 </head>
 <body>
+
   <h1>🎵 Happy Birthday - Stevie Wonder 🎵</h1>
+  
   <div class="player">
-    <audio controls autoplay>
-      <source src="song1.mp3" type="audio/mpeg">
+    <audio id="audio" controls autoplay>
+      <source src="song1.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
   </div>
+
+  <div id="visualizer">
+    <div class="bar" style="height:10px"></div>
+    <div class="bar" style="height:20px"></div>
+    <div class="bar" style="height:15px"></div>
+    <div class="bar" style="height:25px"></div>
+    <div class="bar" style="height:18px"></div>
+    <div class="bar" style="height:22px"></div>
+    <div class="bar" style="height:16px"></div>
+    <div class="bar" style="height:20px"></div>
+  </div>
+
   <p class="message">
-    “Happy birthday to you...” 🎶<br>
+    “Happy birthday to you...” 🎶<br />
     Your special day deserves all the love and joy. Just like this song, I hope every moment today fills your heart with happiness and unforgettable memories! 💖
   </p>
 
-  <div id="party-emoji" title="Click me for some sparkle!">🎉</div>
+  <div id="dancing-emoji" aria-label="Dancing music emoji" title="Let's dance!">🕺</div>
 
-  <br>
+  <button id="fireworks-btn" aria-label="Celebrate with fireworks" title="Click to celebrate! 🎉" style="
+    margin-top: 30px;
+    font-size: 2rem;
+    background: gold;
+    border: none;
+    border-radius: 12px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    color: black;
+    position: relative;
+    z-index: 10;
+  ">🎉 Celebrate!</button>
+
   <a href="music.html" class="btn">← Back to Playlist</a>
 
-  <script>
-    // Create confetti elements randomly
-    function createConfetti() {
-      const confetti = document.createElement('div');
-      confetti.classList.add('confetti');
-      confetti.style.left = Math.random() * 100 + 'vw';
-      confetti.style.animationDuration = (3 + Math.random() * 3) + 's';
-      confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 80%, 60%)`;
-      document.body.appendChild(confetti);
+  <div id="fireworks-container"></div>
 
-      setTimeout(() => {
-        confetti.remove();
-      }, 6000);
+<script>
+  const audio = document.getElementById('audio');
+  const bars = document.querySelectorAll('#visualizer .bar');
+  const body = document.body;
+  const fireworksContainer = document.getElementById('fireworks-container');
+  const fireworksBtn = document.getElementById('fireworks-btn');
+  const dancingEmoji = document.getElementById('dancing-emoji');
+
+  // === Confetti creation ===
+  function createConfetti() {
+    const confetti = document.createElement('div');
+    confetti.classList.add('confetti');
+    confetti.style.left = Math.random() * 100 + 'vw';
+    confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 80%, 60%)`;
+    confetti.style.animationDuration = (3 + Math.random() * 3) + 's';
+    document.body.appendChild(confetti);
+
+    setTimeout(() => confetti.remove(), 6000);
+  }
+  setInterval(createConfetti, 300);
+
+  // === Sparkles creation ===
+  function createSparkle() {
+    const sparkle = document.createElement('div');
+    sparkle.classList.add('sparkle');
+    sparkle.style.left = Math.random() * 100 + 'vw';
+    sparkle.style.top = Math.random() * 60 + 'vh';
+    sparkle.style.animationDuration = (2 + Math.random() * 2) + 's';
+    sparkle.style.opacity = Math.random() * 0.7 + 0.3;
+    document.body.appendChild(sparkle);
+
+    setTimeout(() => sparkle.remove(), 4000);
+  }
+  setInterval(createSparkle, 400);
+
+  // === Balloons creation ===
+  function createBalloon() {
+    const balloon = document.createElement('div');
+    balloon.classList.add('balloon');
+    balloon.style.left = Math.random() * 100 + 'vw';
+    balloon.style.animationDuration = (6 + Math.random() * 4) + 's';
+    document.body.appendChild(balloon);
+
+    setTimeout(() => balloon.remove(), 10000);
+  }
+  setInterval(createBalloon, 3500);
+
+  // === Audio Visualizer ===
+  // Setup Web Audio API
+  const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  const source = audioCtx.createMediaElementSource(audio);
+  const analyser = audioCtx.createAnalyser();
+  analyser.fftSize = 64;
+  source.connect(analyser);
+  analyser.connect(audioCtx.destination);
+
+  const dataArray = new Uint8Array(analyser.frequencyBinCount);
+
+  function animateVisualizer() {
+    analyser.getByteFrequencyData(dataArray);
+    bars.forEach((bar, i) => {
+      // Scale height from 10 to 60 based on frequency data
+      let height = dataArray[i] / 4 + 10;
+      if(height < 10) height = 10;
+      if(height > 60) height = 60;
+      bar.style.height = height + 'px';
+    });
+
+    // Change background color softly based on average volume
+    let avg = dataArray.reduce((a,b) => a + b, 0) / dataArray.length;
+    let hue = 340 + (avg / 255) * 40; // from pinkish-red to lighter red
+    body.style.backgroundColor = `hsl(${hue}, 70%, 45%)`;
+
+    // Dancing emoji speed changes with avg volume
+    if(avg > 60) {
+      dancingEmoji.style.animationDuration = '0.5s';
+    } else if (avg > 30) {
+      dancingEmoji.style.animationDuration = '1s';
+    } else {
+      dancingEmoji.style.animationDuration = '2s';
     }
 
-    // Create confetti every 300ms while the page is open
-    const confettiInterval = setInterval(createConfetti, 300);
+    requestAnimationFrame(animateVisualizer);
+  }
+  audio.onplay = () => {
+    // Resume audio context on interaction
+    if(audioCtx.state === 'suspended') audioCtx.resume();
+    animateVisualizer();
+  };
 
-    // Sparkle emoji on click
-    const partyEmoji = document.getElementById('party-emoji');
-    partyEmoji.addEventListener('click', () => {
-      partyEmoji.classList.add('sparkle');
-      setTimeout(() => partyEmoji.classList.remove('sparkle'), 1500);
-    });
-  </script>
+  // === Fireworks effect ===
+  function createFirework(x, y) {
+    const firework = document.createElement('div');
+    firework.style.position = 'absolute';
+    firework.style.left = x + 'px';
+    firework.style.top = y + 'px';
+    firework.style.width = '15px';
+    firework.style.height = '15px';
+    firework.style.borderRadius = '50%';
+    firework.style.background = 'gold';
+    firework.style.boxShadow = '0 0 10px 3px gold, 0 0 20px 6px orange';
+    firework.style.opacity = '1';
+    fireworksContainer.appendChild(firework);
+
+    let angle = 0;
+    let distance = 0;
+
+    const explode = () => {
+      distance += 5;
+      angle += Math.PI / 6;
+      firework.style.left = x + distance * Math.cos(angle) + 'px';
+      firework.style.top = y + distance * Math.sin(angle) + 'px';
+      firework.style.opacity -= 0.05;
+      if(firework.style.opacity <= 0) {
+        firework.remove();
+      } else {
+        requestAnimationFrame(explode);
+      }
+    };
+    explode();
+  }
+
+  fireworksBtn.addEventListener('click', (e) => {
+    const rect = fireworksBtn.getBoundingClientRect();
+    const centerX = rect.left + rect.width / 2;
+    const centerY = rect.top + rect.height / 2;
+
+    for(let i = 0; i < 12; i++) {
+      createFirework(centerX, centerY);
+    }
+  });
+</script>
+
 </body>
 </html>
+
